[tool.poetry]
name = "selenium-demo-py"
version = "0.1.0"
description = ""
authors = ["yashaka <yashaka@gmail.com>"]
readme = "README.md"
packages = [{include = "selenium_demo_py"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.10.0"
pytest = "^7.4.0"
webdriver-manager = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
